# Prompt-Engineering

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/projects/: taobao-12-no-threshold-redpacket.json  taobao-25-no-threshold-redpacket.json
configs/validation/: strict-default.json  taobao-25-promo.json
docs/: architecture.md  development.md  feasibility-study.md  generalization-proposal.md  implementation-plan.md  libtv-omnihuman-workflow-notes.md
prompt-engineering/: SKILL.md
prompt-engineering/agents/: openai.yaml
prompt-engineering/references/: avatar-rules.md  campaign-contract.md  cli-parameters.schema.json  copywriting-rules.md  oceanengine-contract.md  runtime.md  skill-config.schema.json
prompt-engineering/scripts/: run_cli.py
src/avatar_prompt_pipeline/: __init__.py  artifacts.py  cli.py  config.py  io.py  models.py  presets.py  service.py  template_loader.py  validation.py
taobao-avatar-video/: SKILL.md
taobao-avatar-video/agents/: openai.yaml
taobao-avatar-video/references/: avatar-rules.md  cli-parameters.schema.json  copywriting-rules.md  oceanengine-contract.md  runtime.md  skill-config.schema.json
taobao-avatar-video/scripts/: run_cli.py
tests/cases/: honey_peach_batch_20260702.csv  validation-watermelon.md  watermelon_batch_20260702.csv
tests/e2e/: test_cli.py  test_skill_launcher.py
tests/integration/: test_artifact_outputs.py  test_honey_peach_batch.py  test_package_io.py  test_project_configs.py  test_watermelon_batch.py
tests/unit/: test_config.py  test_models.py  test_service.py  test_skill_package.py  (+1 more)
(+3 files in other folders)
