[project]
name = "avatar-prompt-pipeline"
version = "0.1.0"
description = "Generate auditable copywriting and avatar prompt packages for Auto Oceanengine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
avatar-prompts = "avatar_prompt_pipeline.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pyyaml>=6.0.3",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avatar_prompt_pipeline"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: component boundary tests",
    "e2e: user entry-point tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
allowed-confusables = ["，", "；", "："]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
